[metadata]
name = ws2812_spi_python
version = 1.0.0
author = Dr Matthew Swabey
author_email = matthew@swabey.org
description = Animate and control a string of ws2812 LEDs on a SPI port under Linux
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[options]
packages = find:
install_requires =
    Click
    attrs
    pendulum
    cattrs
    numpy==1.17.4
    spidev

[flake8]
max-line-length=99
extend-ignore = E203
per-file-ignores =
    # ignore unused imports in __init__.py
    __init__.py:F401
